Update instructions modal (still need to fix width on mobile)

--- a/src/app/instructions-modal/instructions-modal.component.scss
+++ b/src/app/instructions-modal/instructions-modal.component.scss
@@ -1,7 +1,8 @@
 .example-solution{
   font-size: 16px;
   img {
-    width: 400px;
+    width: 98%;
+    margin-bottom: 10px;
     display: block;
   }
 }
